--- a/GoodsShop/src/index.css
+++ b/GoodsShop/src/index.css
@@ -3,7 +3,6 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   background-color: #242424;
 
   font-synthesis: none;
@@ -15,6 +14,7 @@
 #root {
   border: 1px solid white;
   padding: 90px;
+  color: white;
 }
 
 a {
